--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@
 
 	color-scheme: light dark;
 	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -17,4 +16,37 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+}
+
+body {
+	background-color: #111;
+	overflow-x: hidden;
+}
+
+body::after {
+	content: "";
+	position: absolute;
+	width: 500px;
+	height: 500px;
+	background-color: #5539cc;
+	top: -100px;
+	left: -100px;
+	border-radius: 50%;
+	filter: blur(150px);
+	opacity: 0.6; /* Slight transparency for softer glow */
+	z-index: -1; /* Make sure circles stay behind content */
+}
+
+body::before {
+	content: "";
+	position: absolute;
+	width: 600px;
+	height: 600px;
+	background-color: #0066cd;
+	top: 0px;
+	right: -200px;
+	border-radius: 50%;
+	filter: blur(150px);
+	opacity: 0.6; /* Slight transparency for softer glow */
+	z-index: -1; /* Make sure circles stay behind content */
 }
